--- a/eatgo-admin-api/src/main/resources/application.yml
+++ b/eatgo-admin-api/src/main/resources/application.yml
@@ -1,13 +1,21 @@
 spring:
   datasource:
-    url: jdbc:h2:C:\Users\aldrm\Downloads\eatgo\data
-  jpa:
+    url: jdbc:h2:C:/Users/aldrm/Downloads/eatgo/data
+    driver-class-name: org.h2.Driver
+    username: sa
 
+  jpa:
     hibernate:
       ddl-auto: update
+  h2:
+    console:
+      enabled: true
+
 
 ---
 spring:
-  profiles: test
   datasource:
     url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+  config:
+    activate:
+      on-profile:
