--- a/eatgo-admin-api/src/main/resources/application.yml
+++ b/eatgo-admin-api/src/main/resources/application.yml
@@ -3,6 +3,7 @@ spring:
     url: jdbc:h2:C:/Users/aldrm/Downloads/eatgo/data
     driver-class-name: org.h2.Driver
     username: sa
+    password:
 
   jpa:
     hibernate:
@@ -15,7 +16,7 @@ spring:
 ---
 spring:
   datasource:
-    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+    url: jdbc:h2:mem:test;
   config:
     activate:
-      on-profile:
+      on-profile: local
