--- a/eatgo-customer-api/src/main/resources/application.yml
+++ b/eatgo-customer-api/src/main/resources/application.yml
@@ -1,11 +1,22 @@
 spring:
   datasource:
-    url: jdbc:h2:C:\Users\aldrm\Downloads\eatgo\data
+    url: jdbc:h2:C:/Users/aldrm/Downloads/eatgo/data
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+
   jpa:
     hibernate:
       ddl-auto: update
+  h2:
+    console:
+      enabled: true
+
+
 ---
 spring:
-  profiles: test
   datasource:
-    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+    url: jdbc:h2:mem:test;
+  config:
+    activate:
+      on-profile: local
