--- a/eatgo-common/build.gradle
+++ b/eatgo-common/build.gradle
@@ -22,19 +22,22 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.projectlombok:lombok:1.18.16'
-    implementation 'junit:junit:4.12'
     implementation 'com.h2database:h2'
     implementation 'junit:junit:4.12'
     implementation 'org.projectlombok:lombok:1.18.16'
-    implementation 'org.projectlombok:lombok:1.18.16'
+
 //    runtimeOnly 'mysql:mysql-connector-java'
+    implementation 'io.jsonwebtoken:jjwt-api:0.10.7'
+
+    runtime 'io.jsonwebtoken:jjwt-impl:0.10.7'
+    runtime 'io.jsonwebtoken:jjwt-jackson:0.10.7'
+
     compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310')
     testCompileOnly 'org.projectlombok:lombok'
     compile group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
     annotationProcessor('org.projectlombok:lombok')
     compile('javax.xml.ws:jaxws-api')
-//    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
