--- a/eatgo-customer-api/src/main/resources/application.yml
+++ b/eatgo-customer-api/src/main/resources/application.yml
@@ -11,6 +11,14 @@ spring:
   h2:
     console:
       enabled: true
+  security:
+    oauth2:
+      resourceserver:
+
+jwt:
+ secret : 12345678901234567890123456789012
+
+
 
 
 ---
